# tries

./: .codedocs  .gitignore  .travis.yml  CMakeLists.txt  README.md  TODO  documentation.dox
Radix_Tree/: CMakeLists.txt  Makefile  README.md  radix_tree.cpp  radix_tree.h  test.cpp  test_radix.cpp
Radix_Tree/gtest/: image_example.cpp  main.cpp
Radix_Tree/lib/: radix_tree.cpp  radix_tree.h
Radix_Tree/test/: main.cpp
TST/: .gitignore  CMakeLists.txt  Makefile  README.md  TST.cpp  TST.h  test.cpp
TST/gtest/: image_example.cpp  main.cpp
TST/lib/: TST.cpp  TST.h
TST/test/: image_example.cpp  main.cpp  method_remove.cpp
doc/html/: TST_8h_source.html  annotated.html  classRadixTree_1_1radix__tree-members.html  classRadixTree_1_1radix__tree.html  classTST_1_1tst-members.html  classTST_1_1tst.html  classTrie_1_1trie-members.html  classTrie_1_1trie.html  classes.html  dir_0d38e5ca817b9274e3f42295996fd72d.html  dir_0d38e5ca817b9274e3f42295996fd72d_dep.map  dir_0d38e5ca817b9274e3f42295996fd72d_dep.md5  dir_1165948c13857ecf12621bbff0fd1147.html  dir_1165948c13857ecf12621bbff0fd1147_dep.map  dir_1165948c13857ecf12621bbff0fd1147_dep.md5  dir_61d6c0ec486d379efb6a73068744e100.html  dir_61d6c0ec486d379efb6a73068744e100_dep.map  dir_61d6c0ec486d379efb6a73068744e100_dep.md5  dir_7775a09d044b45e7e161631558df5a5c.html  dir_7775a09d044b45e7e161631558df5a5c_dep.map  dir_7775a09d044b45e7e161631558df5a5c_dep.md5  dir_ed2da9ab47f23d783a49db2a48c25e16.html  dir_ed2da9ab47f23d783a49db2a48c25e16_dep.map  dir_ed2da9ab47f23d783a49db2a48c25e16_dep.md5  dir_f689789d8fe667eaa3a7b2ebee146e75.html  dir_f689789d8fe667eaa3a7b2ebee146e75_dep.map  dir_f689789d8fe667eaa3a7b2ebee146e75_dep.md5  files.html  functions.html  functions_func.html  graph_legend.html  index.html  radix__tree_8h_source.html  trie_8h_source.html
test/: Makefile  insert.cpp  remove.cpp  remove_found.cpp  search_not_found.cpp  speed_test.cpp
test/data/: .gitignore
test/dict/: cleaner.sh
test/images/: .gitignore
test/plots/: get_keys.py  get_keys_dictionary.py  get_keys_prefix.py  get_keys_prefix_dictionary.py  insert.py  insert_dictionary.py  lcp.py  lcp_dictionary.py  remove.py  remove_found.py  search_found.py  (+7 more)
trie/: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.txt  test.cpp  test_trie.cpp  trie.cpp  trie.h
trie/gtest/: image_example.cpp  main.cpp
trie/lib/: trie.cpp  trie.h
trie/test/: image_example.cpp  main.cpp
(+36 files in other folders)
